[package]
name = "proto_sockets_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = {version = "0.7.9", features = ["codec"]}
bytes = "1.5.0"

[build-dependencies]
prost-build = "0.12.1"
